# vibe-venture

./: README.md
.github/ISSUE_TEMPLATE/: config.yml  showcase.yml
.github/workflows/: convert-showcase-issue-to-discussion.yml  lock-showcase-discussions.yml
workshop/week-01/: README.md  azure.yaml
workshop/week-01/infra/: main.bicep  resources.bicep
workshop/week-02/: README.md
workshop/week-03/: PRD.md  README.md
workshop/week-03/src/: .env.example  AGENTS.md  README.md  azure.yaml  compose.yaml  openapi.json
workshop/week-03/src/api/: .dockerignore  Dockerfile  README.md  pyproject.toml
workshop/week-03/src/api/app/: config.py  main.py  neis_client.py  schemas.py
workshop/week-03/src/api/app/routers/: meals.py  schools.py
workshop/week-03/src/api/tests/: conftest.py
workshop/week-03/src/api/tests/integration/: test_health.py  test_meals.py  test_schools.py
workshop/week-03/src/api/tests/unit/: test_neis_client.py  test_routers_meals_helpers.py  test_schemas.py
workshop/week-03/src/e2e/: .gitignore  README.md  package-lock.json  package.json  playwright.config.ts  tsconfig.json
workshop/week-03/src/e2e/fixtures/: neis-mocks.ts  types.ts
workshop/week-03/src/e2e/support/: test-base.ts
workshop/week-03/src/e2e/tests/: happy-path.spec.ts  no-results.spec.ts
workshop/week-03/src/infra/: main.bicep  main.parameters.json  resources.bicep
workshop/week-03/src/web/: .dockerignore  Dockerfile  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
workshop/week-03/src/web/nginx/: nginx.conf  (+1 more)
(+21 files in other folders)
