[project]
name = "vibe-venture-api"
description = "FastAPI proxy for NEIS 학교/급식 오픈 API"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "httpx>=0.27",
    "pydantic>=2.8",
    "pydantic-settings>=2.5",
    "python-dotenv>=1.0",
    "uvicorn[standard]>=0.32",
]

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.0",
    "pytest-cov>=7.0",
    "respx>=0.21",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "unit: pure unit tests with no I/O",
    "integration: tests that exercise the FastAPI app end-to-end with mocked NEIS",
]
